--- a/app/src/main/res/layout/item_medicine_dosage.xml
+++ b/app/src/main/res/layout/item_medicine_dosage.xml
@@ -5,21 +5,24 @@
 
     <TextView
         android:text="第"
+        android:textSize="@dimen/text_size_16"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
     <EditText
         android:id="@+id/etDay"
         android:text="1"
+        android:textSize="@dimen/text_size_16"
         android:inputType="number"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:background="@drawable/bg_edittext"
         android:gravity="center"
-        android:layout_width="50dp"
+        android:layout_width="40dp"
         android:layout_height="wrap_content" />
     <TextView
         android:text="天"
+        android:textSize="@dimen/text_size_16"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
@@ -27,17 +30,19 @@
     <EditText
         android:id="@+id/etSize"
         android:text="40"
+        android:textSize="@dimen/text_size_16"
         android:inputType="number"
         android:layout_marginRight="5dp"
         android:background="@drawable/bg_edittext"
         android:gravity="center"
-        android:layout_marginLeft="30dp"
-        android:layout_width="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_width="40dp"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tvUnit"
         android:text="mg"
+        android:textSize="@dimen/text_size_16"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
