--- a/app/src/main/res/layout/activity_plan_mgr.xml
+++ b/app/src/main/res/layout/activity_plan_mgr.xml
@@ -2,17 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_f7f7f7"
     android:orientation="vertical">
 
     <include layout="@layout/top_title"></include>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -28,7 +29,7 @@
                     android:layout_height="60dip"
                     android:textColor="@color/black"
                     android:gravity="center_vertical"
-                    android:textSize="@dimen/text_size_20"
+                    android:textSize="@dimen/text_size_18"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/space_20"
                     android:text="新增方案"/>
@@ -44,7 +45,7 @@
                     android:layout_marginRight="20dp"
                     android:layout_centerVertical="true"
                     android:drawablePadding="10dp"
-                    android:drawableRight="@mipmap/xmxq_button_right_high"/>
+                    android:drawableRight="@mipmap/icon_right_arrow"/>
 
             </RelativeLayout>
 
@@ -52,31 +53,33 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="推荐方案"
-                android:layout_marginLeft="@dimen/space_20"
+                android:textColor="#545454"
+                android:layout_marginLeft="@dimen/space_18"
                 android:layout_marginTop="@dimen/space_10"
-                android:textSize="@dimen/text_size_20"
+                android:textSize="@dimen/text_size_18"
                 />
 
-            <include
-                layout="@layout/item_article"
+            <com.hxqydyl.app.ys.ui.scrollviewandgridview.MyScrollListView
+                android:id="@+id/lvSuggestPlan"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginTop="@dimen/space_6" />
-
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dip"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="我的方案"
+                android:textColor="#545454"
                 android:layout_marginLeft="@dimen/space_20"
                 android:layout_marginTop="@dimen/space_10"
-                android:textSize="@dimen/text_size_20"
+                android:textSize="@dimen/text_size_18"
                 />
 
             <ui.swipemenulistview.SwipeMenuListView
                 android:id="@+id/swipe_menu_lv"
                 android:layout_marginTop="@dimen/space_10"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </ScrollView>
 
