--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -10,7 +10,7 @@
         android:layout_height="60dip"
         android:textColor="@color/black"
         android:gravity="center_vertical"
-        android:textSize="@dimen/text_size_20"
+        android:textSize="@dimen/text_size_18"
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/space_20"
         android:text="精神压力对血压有何影响"/>
@@ -21,10 +21,10 @@
         android:layout_height="wrap_content"
         android:text="已选用"
         android:layout_alignParentRight="true"
-        android:textColor="@color/blue_light"
-        android:textSize="@dimen/text_size_16"
+        android:textColor="#696969"
+        android:textSize="@dimen/text_size_14"
         android:layout_marginRight="20dp"
         android:layout_centerVertical="true"
         android:drawablePadding="10dp"
-        android:drawableRight="@mipmap/xmxq_button_right_high"/>
+        android:drawableRight="@mipmap/icon_right_arrow"/>
 </RelativeLayout>
