--- a/app/src/main/res/layout/top_title.xml
+++ b/app/src/main/res/layout/top_title.xml
@@ -31,4 +31,15 @@
         android:layout_marginRight="18dp"
         android:visibility="gone"
         android:src="@drawable/btn_back" />
+
+    <TextView
+        android:id="@+id/right_txt_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_14"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="18dp"
+        android:visibility="gone" />
 </RelativeLayout>
