--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -112,4 +112,5 @@
     <color name="color_f2f2f2">#f2f2f2</color>
     <color name="color_c3c3c3">#c3c3c3</color>
 
+    <color name="color_dcdcdc">#dcdcdc</color>
 </resources>
