--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -53,6 +53,8 @@
     <dimen name="text_size_9">9.0sp</dimen>
     <dimen name="text_size_8">8.0sp</dimen>
     <dimen name="text_size_7">7.0sp</dimen>
+    <dimen name="space_40">40.0dip</dimen>
+    <dimen name="space_35">35.0dip</dimen>
     <dimen name="space_30">30.0dip</dimen>
     <dimen name="space_29">29.0dip</dimen>
     <dimen name="space_28">28.0dip</dimen>
