--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent">
 
     <View android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
+        android:layout_height="10dp"
+        android:background="@color/color_f7f7f7"/>
+    <View android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#d3d3d3"/>
 
