添加随访表单里面的单条记录

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -111,5 +111,6 @@
     <color name="color_4b4b4b">#4b4b4b</color>
     <color name="color_f2f2f2">#f2f2f2</color>
     <color name="color_c3c3c3">#c3c3c3</color>
+    <color name="color_eeeeee">#eeeeee</color>
 
 </resources>
