--- a/app/src/main/res/layout/activity_illness_change_details.xml
+++ b/app/src/main/res/layout/activity_illness_change_details.xml
@@ -2,13 +2,116 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
-
-    <com.hxqydyl.app.ys.ui.fullshowview.FullShowListView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/space_10"
+        android:layout_marginRight="@dimen/space_10"
+        android:background="@drawable/shape_illness_change_bg">
 
-    </com.hxqydyl.app.ys.ui.fullshowview.FullShowListView>
+        <LinearLayout
+            android:id="@+id/llUsualChange"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvChangeName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="left|center_vertical"
+                    android:paddingLeft="@dimen/space_10"
+                    android:minWidth="90dp"
+                    android:text="@string/illness_change"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_15" />
+
+                <TextView
+                    android:id="@+id/tvChangeStatus"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    android:gravity="left|center_vertical"
+                    android:paddingRight="@dimen/space_10"
+                    android:text="好转"
+                    android:textColor="@color/color_696969"
+                    android:textSize="@dimen/text_size_14" />
+            </LinearLayout>
+
+            <View style="@style/divider_line" />
+
+            <TextView
+                android:id="@+id/tvChangeDescriptionTitle"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="90dp"
+                android:background="@color/white"
+                android:gravity="left|center_vertical"
+                android:paddingRight="@dimen/space_10"
+                android:text="病情变化描述"
+                android:textColor="@color/color_696969"
+                android:textSize="@dimen/text_size_14" />
+
+            <View
+                style="@style/divider_line"
+                android:layout_marginLeft="90dp" />
+
+            <TextView
+                android:id="@+id/tvChangeDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="90dp"
+                android:background="@color/white"
+                android:paddingBottom="12dp"
+                android:paddingRight="@dimen/space_10"
+                android:paddingTop="12dp"
+                android:text="病情变化描述详情"
+                android:textColor="@color/color_696969"
+                android:textSize="@dimen/text_size_14" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/llOtherChange"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="40dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvOtherChangeTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="left|center_vertical"
+                android:paddingLeft="@dimen/space_10"
+                android:minWidth="90dp"
+                android:text="其他情况"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_15" />
+
+            <TextView
+                android:id="@+id/tvOtherChangeDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:paddingBottom="12dp"
+                android:paddingRight="@dimen/space_10"
+                android:paddingTop="12dp"
+                android:text="其他情况描述详情"
+                android:textColor="@color/color_696969"
+                android:textSize="@dimen/text_size_14" />
+        </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
