--- a/app/src/main/res/layout/include_optionspicker.xml
+++ b/app/src/main/res/layout/include_optionspicker.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:background="@android:color/white"
+    android:background="@color/white"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
      <com.hxqydyl.app.ys.ui.pickerview.lib.WheelView
